[package]
name = "dggtui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
serde = { version = "1", features = ["derive"] }
unicode-segmentation = "1.2"
unicode-width = "0.1"
textwrap = "0.15"
config = "0.13.1"
dirs = "4.0"


# Image stuff
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "*"

viuer = "0.5.3"
image = "*"

serde_json = "1.0"

tokio = { version = "1.18.2", features = ["full"] }
# tokio = { version = "1.18.2", features = ["full"] }
websocket-lite = "0.5.1"
tokio-util = { version = ">=0.6", features = ["codec"] }
base64 = "0.13"
bytes = "1"
futures = "0.3"
native-tls = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }
rand = "0.8"
tokio-openssl = { version = "0.6", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
url = "2"
websocket-codec = { version = "0.5" }

[features]
default = ["ssl-native-tls"]
ssl-native-tls = ["native-tls", "tokio-native-tls"]
ssl-openssl = ["openssl", "tokio-openssl"]
